--- a/package.json
+++ b/package.json
@@ -8,12 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "leaflet": "^1.9.4",
     "next": "15.5.3",
     "next-intl": "^4.3.9",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
