Adding heat layer

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet.heat": "^0.2.0",
     "next": "15.5.3",
     "next-intl": "^4.3.9",
     "react": "19.1.0",
