--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@deck.gl/aggregation-layers": "^9.1.15",
+    "@deck.gl/geo-layers": "^9.1.15",
+    "@deck.gl/layers": "^9.1.15",
+    "@deck.gl/react": "^9.1.15",
     "@turf/turf": "^7.2.0",
-    "leaflet": "^1.9.4",
-    "leaflet-defaulticon-compatibility": "^0.1.2",
-    "leaflet.heat": "^0.2.0",
+    "deck.gl": "^9.1.15",
     "next": "15.5.3",
     "next-intl": "^4.3.9",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
