--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@deck.gl/react": "^9.1.15",
     "@turf/turf": "^7.2.0",
     "deck.gl": "^9.1.15",
+    "lucide-react": "^0.545.0",
     "next": "15.5.3",
     "next-intl": "^4.3.9",
     "react": "19.1.0",
