--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@deck.gl/react": "^9.1.15",
     "@turf/turf": "^7.2.0",
     "deck.gl": "^9.1.15",
-    "next": "15.5.3",
+    "next": "^15.5.5",
     "next-intl": "^4.3.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
