--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "deck.gl": "^9.1.15",
     "next": "^15.5.6",
     "next-intl": "^4.3.9",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.3.0",
     "zustand": "^5.0.8"
