--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@deck.gl/geo-layers": "^9.1.15",
     "@deck.gl/layers": "^9.1.15",
     "@deck.gl/react": "^9.1.15",
+    "@tanstack/react-query": "^5.90.6",
     "@turf/turf": "^7.2.0",
     "deck.gl": "^9.1.15",
     "next": "^15.5.6",
